WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287499
Non-unified build fixes: SerializationContext edition
https://bugs.webkit.org/show_bug.cgi?id=287499
Summary
Non-unified build fixes: SerializationContext edition
Lauro Moura
Reported
2025-02-11 11:22:09 PST
Missing the includes in a number of places, a a drive-by fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-02-11 11:25:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40423
EWS
Comment 2
2025-02-11 14:02:29 PST
Committed
290238@main
(183f726261eb): <
https://commits.webkit.org/290238@main
> Reviewed commits have been landed. Closing PR #40423 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-11 14:03:50 PST
<
rdar://problem/144641000
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug