Non-unified build fixes: SerializationContext edition https://bugs.webkit.org/show_bug.cgi?id=287499

Unreviewed build fix.

Missing the CSSSerializationContext includes and a drive-by
BoxExtents missing include.

* Source/WebCore/css/CSSImportRule.cpp:
* Source/WebCore/css/calc/CSSCalcValue.cpp:
* Source/WebCore/dom/SpatialBackdropSource.cpp:
* Source/WebCore/page/scrolling/ScrollingTree.h:
* Source/WebCore/style/values/color/StyleCurrentColor.cpp:
* Source/WebCore/style/values/color/StyleCurrentColor.h:

Canonical link: https://commits.webkit.org/290238@main